--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -39,6 +39,9 @@
       {% endblock content %}
     </div>
 
+    {% block include_js %}
+    {% endblock include_js %}
+
     <script>
       document.addEventListener('DOMContentLoaded', (event) => {
         // DOM loaded
