feat: persist chat messages with database model, admin integration, chat history, and view integration

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -5,7 +5,16 @@
 {% endblock title %}
 
 {% block content %}
-  <div id="chat"></div>
+  <div id="chat">
+    {% for message in latest_messages %}
+      <div class="message {% if message.user == request.user %}me{% else %}other{% endif %}">
+        <strong>{{ message.user.username }}</strong>
+        <span class="date">{{ message.sent_on|date:"Y.m.d H:i A" }}</span>
+        <br>
+        {{ message.content }}
+      </div>
+    {% endfor %}
+  </div>
   <div id="chat-input">
     <input type="text" id="chat-message-input">
     <input type="submit" value="Send" id="chat-message-submit">
