--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -31,7 +31,7 @@
   const courseId = JSON.parse(document.getElementById('course-id').textContent);
   const requestUser = JSON.parse(document.getElementById('request-user').textContent);
 
-  const url = 'ws://' + window.location.host + '/ws/chat/room/' + courseId + '/';
+  const url = 'wss://' + window.location.host + '/ws/chat/room/' + courseId + '/';
 
   const chatSocket = new WebSocket(url);
 
